tests/compile_fail/eq_char8t.cc
// SPDX-License-Identifier: MIT
#include <umitest/check.hh>

void test() {
    umi::test::check_eq(u8"a", u8"b");
}
